[package]
name = "libsql-php"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = "*"
libsql = { git = "https://github.com/libsql/libsql/", rev = "4de573727ccd65225b9d4944d49cb61b89196e87" }
once_cell = "1.18.0"
tokio = { version = "1.29.1", features = [ "rt-multi-thread" ] }

[profile.release]
strip = "debuginfo"
